tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/compile-time-if-missing-block.wyst
module syntax_bad_hash_if

#if true
  const selected: u64 = 1
